--- a/styles.css
+++ b/styles.css
@@ -165,6 +165,7 @@ figure {
 }
 
 figcaption {
+  width: 60%;
   font-size: 14px;
   margin-top: 5px;
   margin-left: 5%;
@@ -186,6 +187,11 @@ img {
 }
 
 .last {
+  float: left;
+  margin-bottom: 30px;
+}
+
+.reference {
   margin-bottom: 30px;
 }
 
